fixing margin issue on mobile w/ illustration chart

--- a/src/components/common/illustration-chart/IllustrationChart.css
+++ b/src/components/common/illustration-chart/IllustrationChart.css
@@ -19,6 +19,6 @@
 
 @media only screen and (max-width: 640px) {
   .illu-chart__container {
-    margin: 2rem 0;
+    /* margin: 2rem 0; */
   }
 }
